--- a/treebolicAidl/build.gradle
+++ b/treebolicAidl/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     aidlPackageWhiteList "org/treebolic/services/iface/ITreebolicAIDLService.aidl"
