--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 07 17:07:54 CEST 2019
+#Sun Aug 25 11:39:37 CEST 2019
 ndk.dir=/opt/androidsdk/ndk-bundle
-sdk.dir=/opt/androidstudio/sdk
+sdk.dir=/opt/androidsdk
