--- a/treebolicParcel/build.gradle
+++ b/treebolicParcel/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
+     }
 
     buildTypes {
         release {
@@ -25,10 +25,18 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    testOptions {
+        //unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
     implementation project(':treebolicMutable')
     implementation project(':treebolicLibModel')
     implementation 'androidx.annotation:annotation:1.1.0'
-}
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+ }
