--- a/treebolicOwlServices/build.gradle
+++ b/treebolicOwlServices/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation project(':preferenceLib')
 
     implementation files('libs/treebolic-provider-owl-owlapi-min.jar')
+    //implementation files('libs/treebolic-provider-owl-owlapi.jar')
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.preference:preference:1.1.0-rc01'
