--- a/treebolicOwlServices/build.gradle
+++ b/treebolicOwlServices/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation files('libs/treebolic-provider-owl-owlapi-min.jar')
     //implementation files('libs/treebolic-provider-owl-owlapi.jar')
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.preference:preference:1.1.0-rc01'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.preference:preference:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
 }
