--- a/treebolicWordNetServices/build.gradle
+++ b/treebolicWordNetServices/build.gradle
@@ -64,8 +64,8 @@ dependencies {
     implementation files('libs/treebolic-provider-wordnet-jwi-nodata.jar')
     implementation files('libs/treebolic-balancer.jar')
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.preference:preference:1.1.0-rc01'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.preference:preference:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'org.apache.commons:commons-compress:1.19'
 }
