--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Aug 25 11:39:37 CEST 2019
+#Sun Mar 07 12:08:07 CET 2021
 ndk.dir=/opt/androidsdk/ndk-bundle
-sdk.dir=/opt/androidsdk
+sdk.dir=/opt/androidstudio/sdk
