--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Mar 07 12:08:07 CET 2021
+#Wed Jul 07 10:00:15 CEST 2021
+sdk.dir=/opt/androidsdk
 ndk.dir=/opt/androidsdk/ndk-bundle
-sdk.dir=/opt/androidstudio/sdk
