--- a/treebolicFilesServices/src/main/AndroidManifest.xml
+++ b/treebolicFilesServices/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
 
 		<activity
 			android:name=".MainActivity"
+			android:exported="true"
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
@@ -43,6 +44,7 @@
 
 		<activity
 			android:name="org.treebolic.filechooser.FileChooserActivity"
+			android:exported="false"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
 			<meta-data
@@ -52,6 +54,7 @@
 
 		<activity
 			android:name="com.bbou.others.OthersActivity"
+			android:exported="false"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
 			<meta-data
@@ -61,6 +64,7 @@
 
 		<activity
 			android:name="com.bbou.donate.DonateActivity"
+			android:exported="false"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
 			<meta-data
@@ -91,8 +95,7 @@
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_aidl_bound_service"
 			android:permission="org.treebolic.files.service.USE"
-			android:process="org.treebolic">
-		</service>
+			android:process="org.treebolic"/>
 
 		<service
 			android:name=".TreebolicFilesMessengerService"
@@ -102,8 +105,7 @@
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_messenger_bound_service"
 			android:permission="org.treebolic.files.service.USE"
-			android:process="org.treebolic">
-		</service>
+			android:process="org.treebolic"/>
 
 	</application>
 
