--- a/treebolicOwlServices/src/main/AndroidManifest.xml
+++ b/treebolicOwlServices/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
 
 		<activity
 			android:name=".MainActivity"
+			android:exported="true"
 			android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
@@ -37,6 +38,7 @@
 
 		<activity
 			android:name=".SettingsActivity"
+			android:exported="false"
 			android:label="@string/title_activity_settings"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
@@ -47,6 +49,7 @@
 
 		<activity
 			android:name=".DownloadActivity"
+			android:exported="false"
 			android:label="@string/title_activity_download"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
@@ -57,6 +60,7 @@
 
 		<activity
 			android:name="org.treebolic.filechooser.FileChooserActivity"
+			android:exported="false"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
 			<meta-data
@@ -66,6 +70,7 @@
 
 		<activity
 			android:name="com.bbou.others.OthersActivity"
+			android:exported="false"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
 			<meta-data
@@ -75,6 +80,7 @@
 
 		<activity
 			android:name="com.bbou.donate.DonateActivity"
+			android:exported="false"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
 			<meta-data
@@ -105,8 +111,7 @@
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_aidl_bound_service"
 			android:permission="org.treebolic.owl.service.USE"
-			android:process="org.treebolic">
-		</service>
+			android:process="org.treebolic"/>
 
 		<service
 			android:name=".TreebolicOwlMessengerService"
@@ -116,8 +121,7 @@
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_messenger_bound_service"
 			android:permission="org.treebolic.owl.service.USE"
-			android:process="org.treebolic">
-		</service>
+			android:process="org.treebolic"/>
 
 	</application>
 
