--- a/treebolicWordNetServices/src/main/AndroidManifest.xml
+++ b/treebolicWordNetServices/src/main/AndroidManifest.xml
@@ -1,20 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="org.treebolic.wordnet.service"
-          android:sharedUserId="org.treebolic.userId">
+	xmlns:tools="http://schemas.android.com/tools"
+	package="org.treebolic.wordnet.service"
+	android:sharedUserId="org.treebolic.userId">
 
-	<permission android:name="org.treebolic.wordnet.service.USE" android:protectionLevel="normal" android:label="Use service" />
-	<uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER"/>
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.WAKE_LOCK"/>
-	<uses-permission android:name="org.treebolic.wordnet.service.USE"/>
+	<permission
+		android:name="org.treebolic.wordnet.service.USE"
+		android:label="Use service"
+		android:protectionLevel="normal" />
+
+	<uses-permission android:name="android.permission.ACCESS_DOWNLOAD_MANAGER" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="org.treebolic.wordnet.service.USE" />
 
 	<application
 		android:allowBackup="true"
@@ -26,10 +29,11 @@
 
 		<activity
 			android:name=".MainActivity"
+			android:exported="true"
 			android:label="@string/app_name">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.LAUNCHER"/>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 
@@ -40,45 +44,49 @@
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
 			android:name=".QueryProviderActivity"
+			android:exported="false"
 			android:label="@string/title_activity_query_file_provider"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
 			android:name=".DownloadActivity"
+			android:exported="false"
 			android:label="@string/title_activity_download"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
 			android:name="com.bbou.others.OthersActivity"
+			android:exported="false"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<activity
 			android:name="com.bbou.donate.DonateActivity"
+			android:exported="false"
 			android:parentActivityName=".MainActivity"
 			tools:targetApi="jelly_bean">
 			<meta-data
 				android:name="android.support.PARENT_ACTIVITY"
-				android:value=".MainActivity"/>
+				android:value=".MainActivity" />
 		</activity>
 
 		<service
@@ -91,8 +99,7 @@
 			android:permission="android.permission.BIND_JOB_SERVICE"
 			android:process="org.treebolic">
 			<intent-filter>
-				<action android:name="org.treebolic.service.action.MAKE_MODEL">
-				</action>
+				<action android:name="org.treebolic.service.action.MAKE_MODEL"/>
 			</intent-filter>
 		</service>
 
@@ -104,8 +111,7 @@
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_aidl_bound_service"
 			android:permission="org.treebolic.wordnet.service.USE"
-			android:process="org.treebolic">
-		</service>
+			android:process="org.treebolic"/>
 
 		<service
 			android:name=".TreebolicWordNetMessengerService"
@@ -114,8 +120,7 @@
 			android:exported="true"
 			android:icon="@mipmap/ic_launcher"
 			android:label="@string/service_messenger_bound_service"
-			android:permission="org.treebolic.wordnet.service.USE">
-		</service>
+			android:permission="org.treebolic.wordnet.service.USE"/>
 
 	</application>
 
