--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,19 @@
 buildscript {
 
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath 'com.android.tools.build:gradle:7.2.2'
     }
 }
 
 allprojects {
 
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
 
@@ -23,8 +23,8 @@ allprojects {
         versionCode = 1
         versionName = '0.1'
         minSdkVersion = 14
-        targetSdkVersion = 30
-        compileSdkVersion = 30
+        targetSdkVersion = 32
+        compileSdkVersion = 32
         multiDexEnabled = true
     }
 
