--- a/treebolicClientsIface/src/main/AndroidManifest.xml
+++ b/treebolicClientsIface/src/main/AndroidManifest.xml
@@ -2,17 +2,4 @@
   ~ Copyright (c) Treebolic 2019. Bernard Bou <1313ou@gmail.com>
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-          package="org.treebolic.clients.iface"
-	>
-
-	<application
-		android:allowBackup="true"
-		android:label="@string/app_name"
-		android:supportsRtl="true"
-		>
-
-	</application>
-
-</manifest>
+<manifest package="org.treebolic.clients.iface" />
