--- a/treebolicWordNetServices/build.gradle
+++ b/treebolicWordNetServices/build.gradle
@@ -76,11 +76,11 @@ dependencies {
     implementation project(':donateLib')
 
     implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'androidx.preference:preference:1.2.1'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'org.apache.commons:commons-compress:1.26.2'
 
-    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.core:core-ktx:1.15.0'
     implementation "androidx.multidex:multidex:${multiDexVersion}"
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:${desugaringVersion}"
 }
